--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,28 @@ mapnik/paths.py
 .mason/
 mason_packages/
 mapnik/plugins
+env
+
+*.sln
+*.vcxproj*
+*.ipch
+*.log
+*.tlog
+*.pdb
+*.db
+*.obj
+.vscode
+.*vs
+
+vc14
+x64
+
+*.png
+*.tif
+*.jpg
+*.webp
+*.dll
+*.pyd
+mapnik/fonts
+mapnik/libs
+mapnik/input
